--- a/Changes
+++ b/Changes
@@ -1,2 +1,3 @@
 [2017-02-07] update shadowsocks-libev to v3.0.1
 [2017-02-24] update shadowsocks-libev to v3.0.3
+[2017-03-17] update shadowsocks-libev to v3.0.4
