--- a/Changes
+++ b/Changes
@@ -4,3 +4,4 @@
 [2017-03-21] update shadowsocks-libev to v3.0.5
 [2017-04-27] update shadowsocks-libev to v3.0.6
 [2017-07-02] update shadowsocks-libev to v3.0.7
+[2017-08-08] update shadowsocks-libev to v3.0.8
