--- a/Changes
+++ b/Changes
@@ -5,3 +5,4 @@
 [2017-04-27] update shadowsocks-libev to v3.0.6
 [2017-07-02] update shadowsocks-libev to v3.0.7
 [2017-08-08] update shadowsocks-libev to v3.0.8
+[2017-09-01] Add c-ares support
